--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body {
+* {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
@@ -13,7 +13,8 @@ li {
 }
 
 .first-nav {
-  background-color: #272a31;
+  background-color: #303135;
+  align-items: center;
 }
 
 .first-nav-content {
@@ -21,6 +22,7 @@ li {
   justify-content: flex-end;
   gap: 10px;
   margin-right: 10%;
+  align-items: center;
 }
 
 .first-nav-content li{
@@ -30,7 +32,8 @@ li {
 
 .second-nav {
   display: flex;
-  margin-left: 10%;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .second-nav .logo {
@@ -39,7 +42,16 @@ li {
 
 .second-nav-content {
   display: flex;
-  justify-content: s;
   gap: 20px; 
   margin-left: 8%;
+  align-items: center;
+  padding: 10px;
+}
+
+.nav-button {
+  background-color: white;
+  color: #ee523c;
+  border: 4px solid #ee523c;
+  padding: 10px;
+  width: 150px;
 }
