--- a/style.css
+++ b/style.css
@@ -55,3 +55,22 @@ li {
   padding: 10px;
   width: 150px;
 }
+
+.headline {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-image: url('./images/background-headlin.svg');
+  padding: 100px;
+}
+
+h1 {
+  color: #ee523c;
+  font-size: 2.8rem;
+  line-height: 3rem;
+}
+
+.headlin-description {
+  width: 50%;
+  margin: 15px;
+}
