--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/cocogoose');
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'lato', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -15,6 +16,7 @@ li {
 .first-nav {
   background-color: #303135;
   align-items: center;
+  height: 5vh;
 }
 
 .first-nav-content {
@@ -58,19 +60,154 @@ li {
 
 .headline {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  justify-content: center;
+  gap: 10px;
   background-image: url('./images/background-headlin.svg');
   padding: 100px;
+  font-family: 'lato', sans-serif;
+  
 }
+
+/* .headline-content {
+  width: 100%;
+  height: 100%;
+  min-height: 90vh;
+  max-width: 800px;
+} */
 
 h1 {
   color: #ee523c;
-  font-size: 2.8rem;
-  line-height: 3rem;
+  font-size: 2rem;
+  line-height: 2.8rem;
+  font-family: 'COCOGOOSE', sans-serif;
+  padding-bottom: 18px;
 }
 
 .headlin-description {
   width: 50%;
-  margin: 15px;
+}
+
+.main-program {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 3rem;
+  background-image: url(./images/main.background.png);
+  background-color: #272a32;
+  color: #f7f7f7;
+  height: 90vh;
+}
+
+.title-program {
+  
+}
+
+.cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 70%;
+  padding-top: 3rem;
+  gap: 10px;
+}
+
+.card {
+  height: 75%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.card-1 {
+  height: 17rem;
+  display: grid;
+  grid-template-columns: none;
+  grid-template-rows: 4rem 5rem 6rem;
+  justify-items: center;
+  margin: 0;
+  width: 9rem;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-sizing: border-box;
+  align-items: center;
+}
+
+.card-1:hover {
+  border: 1px solid #fff;
+  transition: 1s all;
+}
+
+.img-card img{
+  width: 50px;
+  height: 50px;
+  align-items: center;
+  
+}
+
+.title-card {
+  color: #ee523c;
+  font-size: 1rem;
+}
+
+.description-card {
+  font-size: 15px;
+
+}
+
+.partner {
+  min-height: 220px;
+  background-color: rgb(71, 64, 81);
+}
+
+.Partner-logo {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 9rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.2rem;
+}
+
+.Partner-logo li {
+  text-decoration: none;
+  list-style: none;
+}
+
+.Partner-logo li img {
+  width: 5.5rem;
+}
+
+.partner h3 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+.toolbar {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .first-nav {
+    display: none;
+  }
+
+  .second-nav {
+    display: none;
+  }
+
+  .toolbar {
+    display: block;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+
+  }
 }
